  addPath and removePath.

* QString::mid, QString::midRef and QByteArray::mid, if the position passed
  is equal to the length (that is, right after the last character/byte),
  now return an empty QString, QStringRef or QByteArray respectively.
  in Qt 4 they returned a null QString or a null QStringRef.

* QDate, QTime, and QDateTime have undergone important behavioural changes:
  * QDate::setYMD() is deprecated, use QDate::setDate() instead
  * Most methods now apply strict validity checks and will return appropriate
    and consistent values when invalid.  For example, QDate::year() will return
    0 and QDate::shortMonthName() will return QString().
  * Adding days to a null QDate or seconds to a null QTime will no longer return
    a valid QDate/QTime.
  * QDate stores the Julian Day as a qint64 extending date support across a
    more interesting range, see the class documentation for details.
    * Conversion to YMD form dates is only accurate between to 4800 BCE to
      1.4 million CE
    * The QDate::addDays() and QDateTime::addDays() methods now take a qint64
    * The QDate::daysTo() and QDateTime::daysTo() methods now return a qint64


* QIntValidator and QDoubleValidator no longer fall back to using the C locale if
  the requested locale fails to validate the input.

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via
  proper parent/child functions instead of using navigate which has been deprecated for this purpose.
  Table and cell interfaces have been added to qaccessible2.h

* Touch events and points have been extended to hold additional
  information like capability flags, point-specific flags, velocity,
  and raw positions.

QtWidgets
---------
* QInputContext removed as well as related getters and setters on QWidget and QApplication.
  Input contexts are now platform specific.

* QInputDialog::getInteger() has been obsoleted. Use QInputDialog::getInt() instead.
